<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_measurment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pl.edu.agh.kt.aradoszek.meterreader.Activities.GetMeasurmentActivity">


    <Button
        android:text="@string/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/photo_button" />

    <Button
        android:text="@string/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gallery_button" />

    <ImageView
        android:id="@+id/meter_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentTop="true" />
    <Button
        android:text="@string/recognize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recognize_button" />
    <EditText
        android:id="@+id/measurment_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10" />
    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_button" />

</LinearLayout>
